--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: java
-rvm: 
-  -10.0.2
+
+
+jdk:
+  - oraclejdk8
+  
+install: true
+
+script: 
+- mvn -f RiskBoardGame/pom.xml test
+- "mvn -f RiskBoardGame/pom.xml cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
